<resources>
    <string name="app_name">Smart ROI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">&#xf1fe;</string>
    <string-array name="crud_options">
        <item>ดูรายการนี้</item>
        <item>ปรับปรุงรายการนี้</item>
        <item>ลบรายการนี้</item>
    </string-array>
    <string-array name="martial_status">
        <item>โสด</item>
        <item>สมรส</item>
        <item>หญาร่าง</item>
    </string-array>
    <string-array name="prefix_names">
        <item>นาย</item>
        <item>นาง</item>
        <item>นางสาว</item>
    </string-array>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dicta doloremque eaque, enim illum incidunt ipsum magni, modi molestias nemo possimus quasi unde? Distinctio ducimus itaque iusto, saepe sint unde!</string>

    <string name="dataManage">การจัดการข้อมูล</string>
    <string name="url_terms">http://sat.nan.rmutl.ac.th/science/</string>
    <string name="terms">ข้อตกลงและเงื่อนไข</string>
    <string name="faq">คำถามที่พบบ่อย</string>
    <string name="faq_summary">ดูคำถามที่ถามบ่อยจากผู้ใช้งาน</string>
    <string name="faq_url">https://www.google.com/</string>
    <string name="version">เวอร์ชั่น</string>
    <string name="security">ความปลอดภัย</string>
    <string name="about">เกี่ยวกับ</string>
    <string name="changePass">เปลียนรหัสผ่าน</string>
    <string name="importData">นำเข้าข้อมูล</string>
    <string name="importDataSummary">นำเข้าข้อมูลแอพจากที่เก็บข้อมูล</string>
    <string name="exportData">ส่งออกข้อมูล</string>
    <string name="exportDataSummary">ส่งออกข้อมูลไปยังที่เก็บข้อมูล</string>

</resources>
